--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,10 @@
     <title>hw-10</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <ul>
+      <li><a href="./1-timer.html">Task 1</a></li>
+      <li><a href="./2-snackbar.html">Task 2</a></li>
+    </ul>
+  </body>
 </html>
